// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Does not render user info when loading is not completed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-hidden="true"
        class="sc-gsTCUz czSahu"
      >
        <div
          class="sc-dlfnbm dVCTaS"
        >
          <img
            alt="Tejas Kumar"
            class="sc-hKgILt iQfDQP"
            src="https://avatars1.githubusercontent.com/u/9947422?v=4"
          />
          <h3
            class="sc-eCssSg fkxmHe"
          >
            Tejas Kumar
          </h3>
        </div>
        <p
          class="sc-jSgupP AmsdJ"
        >
          I write code and love life.
        </p>
        <h3
          class="sc-bdfBwQ sc-gKsewC fVVSDW iJGtCW"
        >
          Top repositories
        </h3>
        <ul
          class="sc-iBPRYJ dOaAzX"
        >
          <li>
            <a
              href="https://github.com/TejasQ/add-gitignore"
            >
              TejasQ/add-gitignore
            </a>
          </li>
          <li>
            <a
              href="https://github.com/TejasQ/basically-fullstack-graphql"
            >
              TejasQ/basically-fullstack-graphql
            </a>
          </li>
          <li>
            <a
              href="https://github.com/TejasQ/basically-streams"
            >
              TejasQ/basically-streams
            </a>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-hidden="true"
      class="sc-gsTCUz czSahu"
    >
      <div
        class="sc-dlfnbm dVCTaS"
      >
        <img
          alt="Tejas Kumar"
          class="sc-hKgILt iQfDQP"
          src="https://avatars1.githubusercontent.com/u/9947422?v=4"
        />
        <h3
          class="sc-eCssSg fkxmHe"
        >
          Tejas Kumar
        </h3>
      </div>
      <p
        class="sc-jSgupP AmsdJ"
      >
        I write code and love life.
      </p>
      <h3
        class="sc-bdfBwQ sc-gKsewC fVVSDW iJGtCW"
      >
        Top repositories
      </h3>
      <ul
        class="sc-iBPRYJ dOaAzX"
      >
        <li>
          <a
            href="https://github.com/TejasQ/add-gitignore"
          >
            TejasQ/add-gitignore
          </a>
        </li>
        <li>
          <a
            href="https://github.com/TejasQ/basically-fullstack-graphql"
          >
            TejasQ/basically-fullstack-graphql
          </a>
        </li>
        <li>
          <a
            href="https://github.com/TejasQ/basically-streams"
          >
            TejasQ/basically-streams
          </a>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Badge Renders user info properly when loading is completed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-hidden="false"
        class="sc-gsTCUz hRJwQB"
      >
        <div
          class="sc-dlfnbm dVCTaS"
        >
          <img
            alt="Tejas Kumar"
            class="sc-hKgILt iQfDQP"
            src="https://avatars1.githubusercontent.com/u/9947422?v=4"
          />
          <h3
            class="sc-eCssSg fkxmHe"
          >
            Tejas Kumar
          </h3>
        </div>
        <p
          class="sc-jSgupP AmsdJ"
        >
          I write code and love life.
        </p>
        <h3
          class="sc-bdfBwQ sc-gKsewC fVVSDW iJGtCW"
        >
          Top repositories
        </h3>
        <ul
          class="sc-iBPRYJ dOaAzX"
        >
          <li>
            <a
              href="https://github.com/TejasQ/add-gitignore"
            >
              TejasQ/add-gitignore
            </a>
          </li>
          <li>
            <a
              href="https://github.com/TejasQ/basically-fullstack-graphql"
            >
              TejasQ/basically-fullstack-graphql
            </a>
          </li>
          <li>
            <a
              href="https://github.com/TejasQ/basically-streams"
            >
              TejasQ/basically-streams
            </a>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-hidden="false"
      class="sc-gsTCUz hRJwQB"
    >
      <div
        class="sc-dlfnbm dVCTaS"
      >
        <img
          alt="Tejas Kumar"
          class="sc-hKgILt iQfDQP"
          src="https://avatars1.githubusercontent.com/u/9947422?v=4"
        />
        <h3
          class="sc-eCssSg fkxmHe"
        >
          Tejas Kumar
        </h3>
      </div>
      <p
        class="sc-jSgupP AmsdJ"
      >
        I write code and love life.
      </p>
      <h3
        class="sc-bdfBwQ sc-gKsewC fVVSDW iJGtCW"
      >
        Top repositories
      </h3>
      <ul
        class="sc-iBPRYJ dOaAzX"
      >
        <li>
          <a
            href="https://github.com/TejasQ/add-gitignore"
          >
            TejasQ/add-gitignore
          </a>
        </li>
        <li>
          <a
            href="https://github.com/TejasQ/basically-fullstack-graphql"
          >
            TejasQ/basically-fullstack-graphql
          </a>
        </li>
        <li>
          <a
            href="https://github.com/TejasQ/basically-streams"
          >
            TejasQ/basically-streams
          </a>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
